#1 Interested users are asked, and goferbot can reply.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/walston/goferbot#readme",
   "dependencies": {
+    "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
     "request": "^2.72.0"
   }
