--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
     "mongodb": "^2.1.17",
+    "node-wit": "^3.2.2",
     "request": "^2.72.0"
   }
 }
