--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "mongodb": "^2.1.17",
     "node-wit": "^3.2.2",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
