--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/walston/goferbot#readme",
   "dependencies": {
+    "beepboop-botkit": "^1.3.0",
     "botkit": "^0.1.1",
+    "botkit-storage-mongo": "^1.0.3",
     "cron": "^1.1.0",
     "dotenv": "^2.0.0",
     "mongodb": "^2.1.17",
+    "node-uuid": "^1.4.7",
     "node-wit": "^3.2.2",
     "request": "^2.72.0"
   },
