--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A slack bot to coordinate the morning coffee run for small offices",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node entry-local.js"
   },
   "repository": {
     "type": "git",
